syntax = "proto3";
package oraichain.orai.airesult;
// this line is used by starport scaffolding # 1

// this line is used by starport scaffolding # 3

import "gogoproto/gogo.proto";
// import "cosmos/base/v1beta1/coin.proto";
import "x/airesult/types/types_reward.proto";
option go_package = "github.com/oraichain/orai/x/airesult/types";

// QueryRewardReq is the request type for the Query/QueryReward RPC method
message QueryRewardReq {
    // address is the address of the contract to query
    option (gogoproto.goproto_stringer) = true;
    string block_height = 1;
}

// QueryRewardRes is the response type for the Query/QueryReward RPC method
message QueryRewardRes {
  Reward reward = 1 [(gogoproto.nullable) = false, (gogoproto.moretags) = "json:\"block_reward\""];
}